ending the cube figure

--- a/challegerDraw.html
+++ b/challegerDraw.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <header>
-        <figure>
+    <header class="header">
+        <figure class="header-logo">
             <img src="JGR/logojgr.jpeg" width="120" height="50" alt="LOGO">
         </figure>
         <nav>
@@ -24,11 +24,11 @@
             </li>
         </nav>
     </header>
-    <section>
+    <section class="inicio">
         <article>
-            <h1>Cubo Rubik</h1>
-            <canvas width="1000" height="800" id="drawCube"></canvas>
-            <p>This is front of the cubo showing their colors</p>
+            <h1 class="inicio-title">Cubo Rubik</h1>
+            <canvas width="1000" height="1000" id="drawCube"></canvas>
+            <p class="inicio-paragraph">This is front of the cubo showing their colors</p>
         </article>
     </section>
     <script src="draw-cubo.js"></script>
