finished the project cubo

--- a/challegerDraw.html
+++ b/challegerDraw.html
@@ -38,21 +38,31 @@
         </div>
     </section>
     <script src="draw-cubo.js"></script>
-    <div class="container">
-        <h3 class="contact-title">Contacto</h3>
-    </div>
-    <div class="container">
-        <form action="j304577061@gmail.com" class="contact">
-            <div class="input">
-                <input type="submit" placeholder="Dejame tu Email" id="email">
-                <button type="button">Enviar</button>
-            </div>
-        </form>
-    </div>
-    <footer id="Contact" class="contact">
+    <section id="Contact" class="contact1">
         <div class="container">
-            <figure class="logo-image">
-                <img src="JGR/logojgr.jpeg" width="120" height="50" alt="LOGO">
+            <h3 class="contact-title">Contacto</h3>
+        </div>
+        <div class="container">
+            <form action="j304577061@gmail.com" class="contact">
+                <div class="input">
+                    <input type="text" placeholder="Dejame tu Email" id="email">
+                    <button>Enviar</button>
+                </div>
+                <div class="social-link">
+                    <a href="https://www.facebook.com/profile.php?id=100045366872392" class="social-link facebook"></a>
+                    <a href="https://www.instagram.com/juandagoro1803/" class="social-link instagram"></a>
+                    <a href="https://github.com/juanda103" class="social-link github"></a>
+                    <a href="https://twitter.com/Juan80604889" class="social-link twitter"></a>
+                </div>
+            </form>
+        </div>
+    </section>
+    <footer class="contact-footer">
+        <div class="container">
+            <div class="color-footer">
+                <figure class="logo-image">
+                    <img src="JGR/logojgr.jpeg" width="120" height="50" alt="LOGO">
+            </div>
             </figure>
         </div>
     </footer>
